--- a/mitologia.html
+++ b/mitologia.html
@@ -25,10 +25,10 @@
                 <li><a href="./index.html">Inicio</a></li>
                 <li><a href="./etapas.html">Etapas</a>
                     <ul>
-                            <li><a href="./etapas.html#antiguo">Imperio Antiguo</a> </li>
-                            <li><a href="./etapas.html#medio">Imperio Medio</a></li>
-                            <li><a href="./etapas.html#nuevo">Imperio Nuevo</a></li>
-                            <li><a href="./etapas.html#tardia">Época Tardía</a></li>
+                        <li><a href="./etapas.html#antiguo">Imperio Antiguo</a> </li>
+                        <li><a href="./etapas.html#medio">Imperio Medio</a></li>
+                        <li><a href="./etapas.html#nuevo">Imperio Nuevo</a></li>
+                        <li><a href="./etapas.html#tardia">Época Tardía</a></li>
                     </ul>
                 </li>
 
@@ -39,12 +39,75 @@
         </nav>
     </header>
     <main id="mitologia" class="main_inicio">
-       <Section>
-           <h2></h2>
-       </Section>
-                    
+        <div class="artic_inicio">
+            <header>
+                <h2>Mitología del antiguo egipto</h2>
+            </header>
+            <hr>
+            <Section>
+                <h3>La reencarnación</h3>
+                <p>
+                    La religión egipcia influenció y fue influenciada por el resto de culturas orientales, ya que la
+                    ubicación de Alejandría en la Ruta de la Seda la convertía en un punto neurálgico del comercio y la
+                    transmisión de ideas. Pero si hay algo característico de esta mitología es su concepto de vida
+                    después de la muerte mediante la reencarnación, así como una serie de dioses benevolentes
+                    personificados en la figura del faraón. Y es que la religión egipcia, al igual que la romana y otras
+                    de su época, fue una religión imperial.
+                </p>
+                <p>
+                    De esta forma, el alma del faraón podría escapar de la muerte si su cuerpo era embalsamado siguiendo
+                    unos rituales concretos. Le acompañarían en el más allá todo su séquito y riquezas, para que así
+                    tuviera compañía y lujos propios de su clase. La momificación es sin duda uno de los elementos más
+                    atractivos del mundo egipcio, aunque no es exclusivo de éste.
+                </p>
+            </Section>
+            <Section>
+                <h3>La creación del mundo</h3>
+                <img class="float_left" src="./assest/creacion.jpg" alt="creación del mundo">
+                <p>Existen distintas versiones de la creación del mundo en la religión egipcia, así que a continuación
+                    vamos a hablar del mito de Heliópolis, que es el más extendido. Al principio solo había tinieblas y
+                    aguas turbias, un océano infinito y primigenio que se conocía como Nun. No existían los dioses, el
+                    cielo o la tierra, la vida o la muerte. Solo un caos informe en el que se encontraba disperso el
+                    espíritu del mundo.</p>
+                <p>Poco a poco, este espíritu fue tomando consciencia y acabó convirtiéndose en Ra, el dios del Sol.
+                    Estaba muy solo, así que con su aliento creó a Shu (el viento) y con su saliva a Tefnut (la
+                    humedad). Les ordenó que morasen al otro extremo de Nun e hizo emerger la tierra seca, a la que
+                    llamó Egipto, y el Rio Nilo, que garantizaría su supervivencia.</p>
+                <p>A continuación, Ra creó la vida vegetal y animal para poblar Egipto, al tiempo que Shu y Nefnut
+                    engendraban a Geb y Nut, dioses de la tierra y el cielo que copulaban continuamente. Pero Shu estaba
+                    muy celoso de esta relación, así que decidió separar el cielo de la tierra con sus propios hombros.
+                </p>
+                <p>Geb y Nut no sabían que había pasado, así que enviaron a uno de sus ojos para buscar a Shu y Nefnut.
+                    Pero cuando regresó, vio que otro ojo había ocupado su lugar. Desolado, el primero comenzó a llorar
+                    hasta que Amon Ra se apiadó de él y lo colocó en su frente, creando de esta manera el Sol.</p>
+                <p>Amon Ra recorre el cielo sobre una barca iluminando la tierra hasta llegar al Duat o Infierno, cuyas
+                    12 puertas debe atravesar durante la noche. Al día siguiente se regenera y sigue su eterno viaje
+                    para mantener el orden cósmico. Y así comienza un ciclo de vida y muerte, de transformación y
+                    reencarnación tan característico de la mentalidad egipcia.</p>
 
+            </Section>
+            <Section>
+                <h3>Los dioses egipcios</h3>
+    
+                <p>El panteón egipcio es desproporcionadamente enorme y poco homogéneo, ya que dependiendo de la época o
+                    la región, podemos encontrarnos deidades totalmente distintas. Además, estos dioses ganaban o
+                    perdían prestigio, adoptaban los rasgos unos de otros, cambiaban, se sincretizaban con otras
+                    culturas… Por ejemplo, Ra y Atón se transformaron en Atón-Ra, para posteriormente ser asimilados por
+                    Horus como Ra-Horajti.</p>
+                <p>La triada de dioses egipcios que más perduró en el tiempo fue la de Osiris, Isis y Horus, que
+                    coincidió con la etapa helenística. Incluso en esta época, Osiris sigue siendo un aspecto de Horus,
+                    tendencia que con el paso del tiempo llevó a los egipcios a coquetear con el monoteísmo. No era algo
+                    nuevo, el propio Akenatón ya lo había intentado en el siglo XIV antes de nuestra era, con la
+                    imposición del Culto al Sol.</p>
+            </Section>
+
+        </div>
     </main>
+    <footer class="main_footer">
+        <address>Rubén Novillo Díaz (Tajamar)</address>
+        Primer Ejercicio de creación de una web
+        &copyDerechos reservados
+    </footer>
+</body>
 
-    </body>
-    </html>
+</html>
